# spotify-qt

./: .cirrus.yml  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  _formulas.tex  account_8hpp_source.html  album_8hpp_source.html  albumgroup_8hpp_source.html  albumshape_8hpp_source.html  albumsize_8hpp_source.html  annotated.html  api_8hpp_source.html  artist_8hpp_source.html  artistprofile_8hpp_source.html  audiofeatures_8hpp_source.html  audiokey_8hpp_source.html  audiomode_8hpp_source.html  audioquality_8hpp_source.html  auth_8hpp_source.html  base64_8hpp_source.html  cache_8hpp_source.html  callback_8hpp_source.html  cipher_8hpp_source.html  classes.html  classghc_1_1filesystem_1_1basic__filebuf-members.html  classghc_1_1filesystem_1_1basic__filebuf.html  classghc_1_1filesystem_1_1basic__fstream-members.html  classghc_1_1filesystem_1_1basic__fstream.html  classghc_1_1filesystem_1_1basic__ifstream-members.html  classghc_1_1filesystem_1_1basic__ifstream.html  classghc_1_1filesystem_1_1basic__ofstream-members.html  classghc_1_1filesystem_1_1basic__ofstream.html  classghc_1_1filesystem_1_1directory__entry-members.html  classghc_1_1filesystem_1_1directory__entry.html  classghc_1_1filesystem_1_1directory__iterator-members.html  classghc_1_1filesystem_1_1directory__iterator.html  classghc_1_1filesystem_1_1directory__iterator_1_1impl-members.html  (+577 more)
common/: CMakeLists.txt  readme.md
common/src/: auth.cpp  qthttpclient.cpp  systeminfo.cpp  systemutils.cpp
lib/: CMakeLists.txt  changelog.md  format.hpp  log.cpp  log.hpp  log_message.cpp  log_message.hpp  logmessage.cpp  logmessage.hpp  readme.md  settings.cpp  settings.hpp  sqlite3.cmake  style_guide.md
lib/curl/: CMakeLists.txt  readme.md
lib/enum/: clienttype.hpp  followtype.hpp  logtype.hpp  palette.hpp  playlistorder.hpp  spotifycontext.hpp
lib/include/: CMakeLists.txt
lib/lib/: base64.cpp  base64.h  base64.hpp  cache.cpp  cache.hpp  datetime.cpp  datetime.hpp  developermode.cpp  developermode.hpp  format.cpp  format.hpp  locale.cpp  locale.hpp  readme.md  settings.cpp  settings.hpp  strings.cpp  strings.hpp
lib/paths/: paths.hpp
lib/qt/: CMakeLists.txt  readme.md
lib/res/: model_cache.sql
lib/spotify/: album.cpp  album.hpp  artist.cpp  artist.hpp  audiofeatures.cpp  audiofeatures.hpp  auth.cpp  auth.hpp  clienthandler.cpp  clienthandler.hpp  device.cpp  device.hpp  playback.cpp  playback.hpp  playlist.cpp  playlist.hpp  searchresults.cpp  searchresults.hpp  spotify.cpp  spotify.hpp  track.cpp  track.hpp  user.hpp
lib/src/: CMakeLists.txt  base64.cpp  cache.cpp  cipher.cpp  crashhandler.cpp  datetime.cpp  developermode.cpp  format.cpp  httpclient.cpp  image.cpp  json.cpp  locale.cpp  log.cpp  logmessage.cpp  lyrics.cpp  random.cpp  settings.cpp  spotifyerror.cpp  stopwatch.cpp  strings.cpp  system.cpp  uri.cpp
lib/test/: CMakeLists.txt  readme.md
lib/util/: date.cpp  date.hpp  dateformat.cpp  dateformat.hpp  dateutils.cpp  dateutils.hpp  file.cpp  file.hpp  json.cpp  json.hpp  jsonutils.cpp  path.cpp  path.hpp  strings.cpp  strings.hpp  vector.hpp
qml/: ArtistDialog.qml  CMakeLists.txt  Footer.qml  LibraryView.qml  OpenLinkDialog.qml  PlaylistsView.qml  SearchView.qml  SettingsDialog.qml  SettingsLayout.qml  main.qml  readme.md  res.qrc  setup.qml
qml/js/: artistDialog.js  main.js  playlistView.js  searchView.js  settingsDialog.js  setup.js
qml/src/: common.hpp  qmlmanager.cpp  qmlmanager.hpp  settingsqml.cpp  settingsqml.hpp  spotifyqml.cpp  spotifyqml.hpp  utilsqml.cpp  utilsqml.hpp
src/: CMakeLists.txt  albummenu.cpp  albummenu.hpp  appversion.hpp  artistview.cpp  artistview.hpp  audiofeaturesview.cpp  audiofeaturesview.hpp  centralwidget.cpp  centralwidget.hpp  commandline.cpp  commandline.hpp  darkpalette.cpp  deviceselectdialog.cpp  dragarea.cpp  dragarea.hpp  icon.cpp  icon.hpp  leftsidepanel.cpp  leftsidepanel.hpp  librarylist.cpp  librarylist.hpp  loader.cpp  loader.hpp  log.cpp  log.hpp  logmessage.cpp  logmessage.hpp  lyricsview.cpp  lyricsview.hpp  main.cpp  main.hpp  main.rs  mainmenu.cpp  mainmenu.hpp  maintoolbar.cpp  maintoolbar.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  (+41 more)
src/client/: clienthandler.cpp  clienthandler.hpp  clienthelper.cpp  clienthelper.hpp
src/commandline/: CMakeLists.txt  args.hpp  parser.cpp  parser.hpp  processor.cpp  processor.hpp
src/dialog/: CMakeLists.txt  about.cpp  about.hpp  addtoplaylist.cpp  addtoplaylist.hpp  apirequest.cpp  apirequest.hpp  auth.cpp  auth.hpp  base.cpp  base.hpp  clienthandlerlogdialog.cpp  clienthandlerlogdialog.hpp  createplaylist.cpp  createplaylist.hpp  createplaylistdialog.cpp  createplaylistdialog.hpp  deviceselect.cpp  deviceselect.hpp  deviceselectdialog.cpp  deviceselectdialog.hpp  disallows.cpp  disallows.hpp  duplicateplaylisttrack.cpp  duplicateplaylisttrack.hpp  editplaylist.cpp  editplaylist.hpp  jsondump.cpp  jsondump.hpp  logviewer.cpp  logviewer.hpp  lyricssearch.cpp  lyricssearch.hpp  memory.cpp  memory.hpp  openlink.cpp  openlink.hpp  openlinkdialog.cpp  openlinkdialog.hpp  passwordentry.cpp  (+27 more)
src/enum/: autoplaysupport.hpp  clienttype.hpp  column.hpp  crashrole.hpp  datarole.hpp  dialogaction.hpp  duplicatetracksresponse.hpp  followtype.hpp  installtype.hpp  libraryrole.hpp  linktype.hpp  logtype.hpp  maskshape.hpp  messagetype.hpp  notificationaction.hpp  palette.hpp  playlistorder.hpp  searchtab.hpp  shortcut.hpp  sidepaneltype.hpp  spotifycontext.hpp
src/ipc/: CMakeLists.txt  client.cpp  client.hpp  handler.cpp  handler.hpp  server.cpp  server.hpp
src/keyring/: CMakeLists.txt  kwallet.cpp  kwallet.hpp
src/lib/: CMakeLists.txt  clienthelper.cpp  clienthelper.hpp  qthttpclient.cpp  qthttpclient.hpp  qtpaths.cpp  qtpaths.hpp
src/list/: CMakeLists.txt  contributors.cpp  contributors.hpp  library.cpp  library.hpp  libraryitem.cpp  libraryitem.hpp  librarylist.cpp  librarylist.hpp  playlist.cpp  playlist.hpp  playlistlist.cpp  playlistlist.hpp  tracklistitem.cpp  tracklistitem.hpp  tracks.cpp  tracks.hpp  (+2 more)
test/: CMakeLists.txt  CMakeListsBoost.txt  spotify.cpp  tests.hpp
(+865 files in other folders)
