[package]
name = "spotify-qt"
version = "2.90.0"
authors = ["kraxarn <me@kraxarn.com>"]
edition = "2018"

[dependencies]
qt_core = ""
qt_widgets = ""
qt_gui = ""
serde_json = ""
dirs-next = ""
chrono = ""

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.reqwest]
version = "^0.10"
features = ["json"]

[dependencies.tokio]
version = "^0.2"
features = ["full"]